@@ -1,3 +1,6 @@
+2020-10-23  Stanislas Rolland  <typo32020(arobas)sjbr.ca>
+	* Resolves #92608: PHP 7.4 issues deprecation notices
+
 2020-06-15  Stanislas Rolland  <typo32020(arobas)sjbr.ca>
 	* Resolves #90636: ConfigurationHelper Select EncryptionAlgorythm does not work
 	* Resolves #89735: RequestMiddlewares.php missing
